[package]
name = "clarus"
description = "Tools for working with classic Mac OS resources in Rust"
version = "0.1.0"
authors = ["Jon Chambers <jon.chambers@gmail.com>"]
edition = "2018"

[dependencies]
crc16 = "0.4.0"
encoding_rs = "0.8.28"
fixed = "1.7.0"
lazy_static = "1.4.0"
memchr = "2.3.4"
radix64 = "0.6.2"

[dev-dependencies]
bencher = "0.1.5"
indoc = "1.0"

[[bench]]
name = "archive"
harness = false
